Added logo and custom scrollbar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       This should be the same across all pages.
      -->
-    <link rel="icon" href="./assets/images/1311.png" />
+    <link rel="icon" href="./assets/images/logo.png" />
 		<title>Aryan's Portfolio</title>
     <meta name="description" content="Aryan's Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -37,7 +37,7 @@
 
               <div class="nav__perfil">
                   <!-- <div class="nav__img">
-                      <img src="assets/img/perfil.png" alt="">
+                      <img src="assets/images/logo.png" alt="">
                   </div> -->
                   
                   <div>
@@ -89,7 +89,7 @@
             - Change the number to point to your Unemployable & replace the OpenSea link with your own
             - If you aren't using an Unemployable as your image, remove the entire "a" element
           -->
-          <img src="./assets/images/1311.png" class="portfolio-header-image">
+          <img src="./assets/images/logo.png" class="portfolio-header-image">
           <!--
           <a class="no-underline" target="_blank" href="https://opensea.io/assets/0xe0be388ab81c47b0f098d2030a1c9ef190691a8a/1311">
             <span class="image-caption">Unemployables #1311</span>
