--- a/art.html
+++ b/art.html
@@ -49,8 +49,8 @@
 
         <div class="nav__menu">
           <ul class="nav__list">
-            <li class="nav__item"><a href="/" class="nav__link active">Home</a></li>
-            <li class="nav__item"><a href="art.html" class="nav__link">Art</a></li>
+            <li class="nav__item"><a href="/" class="nav__link">Home</a></li>
+            <li class="nav__item"><a href="art.html" class="nav__link active">Art</a></li>
             <li class="nav__item"><a href="photography.html" class="nav__link">Photography</a></li>
             <li class="nav__item"><a href="code.html" class="nav__link">Code</a></li>
             <li class="nav__item"><a href="music.html" class="nav__link">Music</a></li>
