--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <div class="nav__menu">
           <ul class="nav__list">
             <li class="nav__item"><a href="/" class="nav__link active">Home</a></li>
-            <li class="nav__item"><a href="art.html" class="nav__link">Art</a></li>
-            <li class="nav__item"><a href="photography.html" class="nav__link">Photography</a></li>
-            <li class="nav__item"><a href="code.html" class="nav__link">Code</a></li>
-            <li class="nav__item"><a href="music.html" class="nav__link">Music</a></li>
+            <li class="nav__item"><a href="projects/art" class="nav__link">Art</a></li>
+            <li class="nav__item"><a href="projects/photography" class="nav__link">Photography</a></li>
+            <li class="nav__item"><a href="projects/code" class="nav__link">Code</a></li>
+            <li class="nav__item"><a href="projects/music" class="nav__link">Music</a></li>
 
           </ul>
         </div>
