Fixed "my stuff" links

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <div class="subheader-text project-title">Art</div>
               <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
             </div>
-            <a class="button" href="./project-pages/art">
+            <a class="button" href="./projects/art">
               <span class="button-text">See More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
@@ -182,7 +182,7 @@
               <div class="subheader-text project-title">Photography</div>
               <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
             </div>
-            <a class="button" href="./project-pages/photography">
+            <a class="button" href="./projects/photography">
               <span class="button-text">See More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
@@ -193,7 +193,7 @@
               <div class="subheader-text project-title">Code</div>
               <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
             </div>
-            <a class="button" href="./project-pages/code">
+            <a class="button" href="./projects/code">
               <span class="button-text">See More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
@@ -204,7 +204,7 @@
               <div class="subheader-text project-title">Music</div>
               <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
             </div>
-            <a class="button" href="./project-pages/music">
+            <a class="button" href="./projects/music">
               <span class="button-text">See More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
