Updated photography page and added photo gallery (lightbox)

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <div class="nav__menu">
           <ul class="nav__list">
             <li class="nav__item"><a href="/" class="nav__link active">Home</a></li>
-            <li class="nav__item"><a href="projects/art" class="nav__link">Art</a></li>
-            <li class="nav__item"><a href="projects/photography" class="nav__link">Photography</a></li>
-            <li class="nav__item"><a href="projects/code" class="nav__link">Code</a></li>
-            <li class="nav__item"><a href="projects/music" class="nav__link">Music</a></li>
+            <li class="nav__item"><a href="art" class="nav__link">Art</a></li>
+            <li class="nav__item"><a href="photography" class="nav__link">Photography</a></li>
+            <li class="nav__item"><a href="code" class="nav__link">Code</a></li>
+            <li class="nav__item"><a href="music" class="nav__link">Music</a></li>
 
           </ul>
         </div>
@@ -171,7 +171,7 @@
               <div class="subheader-text project-title">Art</div>
               <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
             </div>
-            <a class="button" href="./projects/art">
+            <a class="button" href="./art">
               <span class="button-text">See More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
@@ -182,7 +182,7 @@
               <div class="subheader-text project-title">Photography</div>
               <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
             </div>
-            <a class="button" href="./projects/photography">
+            <a class="button" href="./photography">
               <span class="button-text">See More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
@@ -193,7 +193,7 @@
               <div class="subheader-text project-title">Code</div>
               <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
             </div>
-            <a class="button" href="./projects/code">
+            <a class="button" href="./code">
               <span class="button-text">See More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
@@ -204,7 +204,7 @@
               <div class="subheader-text project-title">Music</div>
               <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
             </div>
-            <a class="button" href="./projects/music">
+            <a class="button" href="./music">
               <span class="button-text">See More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
@@ -212,7 +212,7 @@
         </div>
       </div>
     </div>
-
+    
     <!-- FOOTER -->
     <div id="footer">
       <a class="icon-link" target="_blank" href="https://github.com/nsx22">
