--- a/code.html
+++ b/code.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="../css/typography.css">
   <link rel="stylesheet" href="../css/utilities.css">
 
-  <script defer src="./js/script.js"></script>
+  <script defer src="../js/script.js"></script>
 </head>
 
 <body>
@@ -51,8 +51,8 @@
           <ul class="nav__list">
             <li class="nav__item"><a href="/" class="nav__link">Home</a></li>
             <li class="nav__item"><a href="art" class="nav__link">Art</a></li>
-            <li class="nav__item"><a href="photography" class="nav__link active">Photography</a></li>
-            <li class="nav__item"><a href="code" class="nav__link">Code</a></li>
+            <li class="nav__item"><a href="photography" class="nav__link">Photography</a></li>
+            <li class="nav__item"><a href="code" class="nav__link active">Code</a></li>
             <li class="nav__item"><a href="music" class="nav__link">Music</a></li>
 
           </ul>
@@ -77,12 +77,12 @@
     <!-- PROJECT HEADER -->
     <div id="project-header">
       <!-- 
-        TODO
+          TODO
 
-        - Change the 'main-title' text to the name of your project
-        - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
-        - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
-      -->
+          - Change the 'main-title' text to the name of your project
+          - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
+          - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
+        -->
       <div class="main-title">Project Name</div>
       <div class="body-text">A small description about the project goes here, get the reader hooked on the project and
         tell them why they should continue to read this page. Give it a sweet tagline.</div>
@@ -91,11 +91,11 @@
 
     <!-- PROJECT DETAILS -->
     <!-- 
-    TODO
+      TODO
 
-    - Change the 'subheader-text' to whatever header you want for project details
-    - Add paragraphs using the <div class="body-text"></div> elements in the "project-details-content"
-  -->
+      - Change the 'subheader-text' to whatever header you want for project details
+      - Add paragraphs using the <div class="body-text"></div> elements in the "project-details-content"
+    -->
     <div id="project-details">
       <div class="subheader-text">Project Details / Background</div>
       <div class="project-details-content">
@@ -119,28 +119,28 @@
       <div class="subheader-text">Image Gallery</div>
       <div class="project-gallery-content">
         <!-- 
-          TODO
+            TODO
 
-          This is where the images in the gallery live. Here's a simple gallery image for you to copy:
+            This is where the images in the gallery live. Here's a simple gallery image for you to copy:
 
-          Full Width Image:
+            Full Width Image:
 
-            <div class="gallery-image-container">
-              <img src="../assets/images/IMAGE_NAME" class="gallery-image">
-              <span class="image-caption">IMAGE_CAPTION</span>
-            </div>
+              <div class="gallery-image-container">
+                <img src="../assets/images/IMAGE_NAME" class="gallery-image">
+                <span class="image-caption">IMAGE_CAPTION</span>
+              </div>
 
-          Half Width Image: 
+            Half Width Image: 
 
-            <div class="gallery-image-container half-width">
-              <img src="../assets/images/IMAGE_NAME" class="gallery-image">
-              <span class="image-caption">IMAGE_CAPTION</span>
-            </div>
+              <div class="gallery-image-container half-width">
+                <img src="../assets/images/IMAGE_NAME" class="gallery-image">
+                <span class="image-caption">IMAGE_CAPTION</span>
+              </div>
 
-          - To add an image to the this area, copy one of the above, paste it below this comment, and change the following:
-              - IMAGE_NAME: the name of the image file in assets/images
-              - IMAGE_CAPTION: to the caption of the image
-        -->
+            - To add an image to the this area, copy one of the above, paste it below this comment, and change the following:
+                - IMAGE_NAME: the name of the image file in assets/images
+                - IMAGE_CAPTION: to the caption of the image
+          -->
         <div class="gallery-image-container half-width">
           <img src="../assets/images/code.jpeg" class="gallery-image">
           <span class="image-caption">Give your image a caption. People love context.</span>
