--- a/photography.html
+++ b/photography.html
@@ -19,11 +19,14 @@
   <meta name="description" content="Aryan's Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link rel="stylesheet" href="../css/layout.css">
-  <link rel="stylesheet" href="../css/typography.css">
-  <link rel="stylesheet" href="../css/utilities.css">
+  <link rel="stylesheet" href="./css/layout.css">
+  <link rel="stylesheet" href="./css/typography.css">
+  <link rel="stylesheet" href="./css/utilities.css">
+  <link rel="stylesheet" href="./css/gallery.css">
+  <link rel="stylesheet" href="./css/lightbox.css">
 
   <script defer src="./js/script.js"></script>
+
 </head>
 
 <body>
@@ -51,8 +54,8 @@
           <ul class="nav__list">
             <li class="nav__item"><a href="/" class="nav__link">Home</a></li>
             <li class="nav__item"><a href="art" class="nav__link">Art</a></li>
-            <li class="nav__item"><a href="photography" class="nav__link">Photography</a></li>
-            <li class="nav__item"><a href="code" class="nav__link active">Code</a></li>
+            <li class="nav__item"><a href="photography" class="nav__link active">Photography</a></li>
+            <li class="nav__item"><a href="code" class="nav__link">Code</a></li>
             <li class="nav__item"><a href="music" class="nav__link">Music</a></li>
 
           </ul>
@@ -60,13 +63,13 @@
 
         <div class="nav__social">
           <a href="https://github.com/nsx22" class="nav__social-icon">
-            <image src="../assets/icons/github.svg" class="footer-icon" />
+            <image src="./assets/icons/github.svg" class="footer-icon" />
           </a>
           <a href="https://youtube.com/@svgegtr" class="nav__social-icon">
-            <image src="../assets/icons/youtube.svg" class="footer-icon" />
+            <image src="./assets/icons/youtube.svg" class="footer-icon" />
           </a>
           <a href="mailto:inbox.aryan@gmail.com" class="nav__social-icon">
-            <image src="../assets/icons/mail.svg" class="footer-icon" />
+            <image src="./assets/icons/mail.svg" class="footer-icon" />
           </a>
         </div>
     </nav>
@@ -77,25 +80,25 @@
     <!-- PROJECT HEADER -->
     <div id="project-header">
       <!-- 
-          TODO
+        TODO
 
-          - Change the 'main-title' text to the name of your project
-          - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
-          - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
-        -->
+        - Change the 'main-title' text to the name of your project
+        - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
+        - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
+      -->
       <div class="main-title">Project Name</div>
       <div class="body-text">A small description about the project goes here, get the reader hooked on the project and
         tell them why they should continue to read this page. Give it a sweet tagline.</div>
-      <image class="project-header-image" src="../assets/images/desktop.jpeg">
+      <image class="project-header-image" src="./assets/images/desktop.jpeg">
     </div>
 
     <!-- PROJECT DETAILS -->
     <!-- 
-      TODO
+    TODO
 
-      - Change the 'subheader-text' to whatever header you want for project details
-      - Add paragraphs using the <div class="body-text"></div> elements in the "project-details-content"
-    -->
+    - Change the 'subheader-text' to whatever header you want for project details
+    - Add paragraphs using the <div class="body-text"></div> elements in the "project-details-content"
+  -->
     <div id="project-details">
       <div class="subheader-text">Project Details / Background</div>
       <div class="project-details-content">
@@ -112,66 +115,33 @@
           pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
       </div>
     </div>
-
-    <!-- IMAGE GALLERY -->
-    <div id="project-gallery">
-      <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
-      <div class="subheader-text">Image Gallery</div>
-      <div class="project-gallery-content">
-        <!-- 
-            TODO
-
-            This is where the images in the gallery live. Here's a simple gallery image for you to copy:
-
-            Full Width Image:
-
-              <div class="gallery-image-container">
-                <img src="../assets/images/IMAGE_NAME" class="gallery-image">
-                <span class="image-caption">IMAGE_CAPTION</span>
-              </div>
-
-            Half Width Image: 
-
-              <div class="gallery-image-container half-width">
-                <img src="../assets/images/IMAGE_NAME" class="gallery-image">
-                <span class="image-caption">IMAGE_CAPTION</span>
-              </div>
-
-            - To add an image to the this area, copy one of the above, paste it below this comment, and change the following:
-                - IMAGE_NAME: the name of the image file in assets/images
-                - IMAGE_CAPTION: to the caption of the image
-          -->
-        <div class="gallery-image-container half-width">
-          <img src="../assets/images/code.jpeg" class="gallery-image">
-          <span class="image-caption">Give your image a caption. People love context.</span>
-        </div>
-        <div class="gallery-image-container half-width">
-          <img src="../assets/images/sketchbook.jpeg" class="gallery-image">
-          <span class="image-caption">Give your image a caption. People love context.</span>
-        </div>
-        <div class="gallery-image-container">
-          <img src="../assets/images/camera.jpeg" class="gallery-image">
-          <span class="image-caption">Give your image a caption. People love context.</span>
-        </div>
-      </div>
-    </div>
   </div>
 
+  <div class="gContainer">
+    <div class="gallery">
+      <a href="./assets/images/camera.jpeg" data-lightbox="models" data-title="Caption1">
+        <img src="./assets/images/camera.jpeg">
+      </a>
+    </div>
+  </div>
   <!-- FOOTER -->
   <div id="footer">
     <a class="icon-link" target="_blank" href="https://github.com/nsx22">
-      <image src="../assets/icons/github.svg" class="footer-icon" />
+      <image src="./assets/icons/github.svg" class="footer-icon" />
     </a>
     <a class="icon-link" target="_blank" href="https://youtube.com/@svgegtr">
-      <image src="../assets/icons/youtube.svg" class="footer-icon" />
+      <image src="./assets/icons/youtube.svg" class="footer-icon" />
     </a>
     <a class="icon-link" href="mailto:inbox.aryan@gmail.com">
-      <image src="../assets/icons/mail.svg" class="footer-icon" />
+      <image src="./assets/icons/mail.svg" class="footer-icon" />
     </a>
   </div>
   <!-- ===== IONICONS and header ===== -->
   <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-  <script src="../js/header.js"></script>
+  <script src="./js/header.js"></script>
+
+  <!-- Lightbox -->
+  <script defer src="./js/lightbox-plus-jquery.js"></script>
 </body>
 
 </html>
