Fixed art code and music pages

--- a/music.html
+++ b/music.html
@@ -19,11 +19,11 @@
   <meta name="description" content="Aryan's Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link rel="stylesheet" href="../css/layout.css">
-  <link rel="stylesheet" href="../css/typography.css">
-  <link rel="stylesheet" href="../css/utilities.css">
+  <link rel="stylesheet" href="./css/layout.css">
+  <link rel="stylesheet" href="./css/typography.css">
+  <link rel="stylesheet" href="./css/utilities.css">
 
-  <script defer src="../js/script.js"></script>
+  <script defer src="./js/script.js"></script>
 </head>
 
 <body>
@@ -60,13 +60,13 @@
 
         <div class="nav__social">
           <a href="https://github.com/nsx22" class="nav__social-icon">
-            <image src="../assets/icons/github.svg" class="footer-icon" />
+            <image src="./assets/icons/github.svg" class="footer-icon" />
           </a>
           <a href="https://youtube.com/@svgegtr" class="nav__social-icon">
-            <image src="../assets/icons/youtube.svg" class="footer-icon" />
+            <image src="./assets/icons/youtube.svg" class="footer-icon" />
           </a>
           <a href="mailto:inbox.aryan@gmail.com" class="nav__social-icon">
-            <image src="../assets/icons/mail.svg" class="footer-icon" />
+            <image src="./assets/icons/mail.svg" class="footer-icon" />
           </a>
         </div>
     </nav>
@@ -86,7 +86,7 @@
       <div class="main-title">Project Name</div>
       <div class="body-text">A small description about the project goes here, get the reader hooked on the project and
         tell them why they should continue to read this page. Give it a sweet tagline.</div>
-      <image class="project-header-image" src="../assets/images/desktop.jpeg">
+      <image class="project-header-image" src="./assets/images/desktop.jpeg">
     </div>
 
     <!-- PROJECT DETAILS -->
@@ -126,14 +126,14 @@
           Full Width Image:
 
             <div class="gallery-image-container">
-              <img src="../assets/images/IMAGE_NAME" class="gallery-image">
+              <img src="./assets/images/IMAGE_NAME" class="gallery-image">
               <span class="image-caption">IMAGE_CAPTION</span>
             </div>
 
           Half Width Image: 
 
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/IMAGE_NAME" class="gallery-image">
+              <img src="./assets/images/IMAGE_NAME" class="gallery-image">
               <span class="image-caption">IMAGE_CAPTION</span>
             </div>
 
@@ -142,15 +142,15 @@
               - IMAGE_CAPTION: to the caption of the image
         -->
         <div class="gallery-image-container half-width">
-          <img src="../assets/images/code.jpeg" class="gallery-image">
+          <img src="./assets/images/code.jpeg" class="gallery-image">
           <span class="image-caption">Give your image a caption. People love context.</span>
         </div>
         <div class="gallery-image-container half-width">
-          <img src="../assets/images/sketchbook.jpeg" class="gallery-image">
+          <img src="./assets/images/sketchbook.jpeg" class="gallery-image">
           <span class="image-caption">Give your image a caption. People love context.</span>
         </div>
         <div class="gallery-image-container">
-          <img src="../assets/images/camera.jpeg" class="gallery-image">
+          <img src="./assets/images/camera.jpeg" class="gallery-image">
           <span class="image-caption">Give your image a caption. People love context.</span>
         </div>
       </div>
@@ -160,18 +160,18 @@
   <!-- FOOTER -->
   <div id="footer">
     <a class="icon-link" target="_blank" href="https://github.com/nsx22">
-      <image src="../assets/icons/github.svg" class="footer-icon" />
+      <image src="./assets/icons/github.svg" class="footer-icon" />
     </a>
     <a class="icon-link" target="_blank" href="https://youtube.com/@svgegtr">
-      <image src="../assets/icons/youtube.svg" class="footer-icon" />
+      <image src="./assets/icons/youtube.svg" class="footer-icon" />
     </a>
     <a class="icon-link" href="mailto:inbox.aryan@gmail.com">
-      <image src="../assets/icons/mail.svg" class="footer-icon" />
+      <image src="./assets/icons/mail.svg" class="footer-icon" />
     </a>
   </div>
   <!-- ===== IONICONS and header ===== -->
   <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-  <script src="../js/header.js"></script>
+  <script src="./js/header.js"></script>
 </body>
 
 </html>
