Updated the project cards text and added code and music card images

--- a/index.html
+++ b/index.html
@@ -71,17 +71,6 @@
         </div>
       </nav>
   </header>
-    <!-- NAVBAR
-    <div class="navbar">
-      <a class="nav-title-link" href="./index.html">
-        <span class="nav-title">Aryan's Portfolio</span>
-        <a class="button" href="mailto:inbox.aryan@gmail.com">
-          <span class="button-text">Contact Me</span>
-        </a>
-      </a>
-    </div>
-    -->
-
     <!-- MAIN PAGE CONTENT -->
     <div id="main-content">
 
@@ -123,19 +112,13 @@
       </div>
 
       <!-- ABOUT SECTION -->
-      <!-- 
-        TODO
-
-        - Change the subheader-text to whatever header you want
-        - Add paragraphs using the <div class="body-text"></div> elements in the "about-section-content"
-      -->
-      <div id="about-section">
+      <!-- <div id="about-section">
         <span class="subheader-text">My Background / About Me</span>
         <div class="about-section-content">
           <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
           <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
         </div>
-      </div>
+      </div> -->
 
       <!-- PROJECTS / MY WORK SECTION -->
       <div id="my-work-section">
@@ -169,7 +152,7 @@
             <img src="./assets/images/desktop.jpeg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Art</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
+              <div class="body-text project-card-text">Art is how I express my creativity and show who I am. I have been drawing and doodling for many years, and it has helped me with peace and relaxation.</div>
             </div>
             <a class="button" href="./art">
               <span class="button-text">See More</span>
@@ -180,7 +163,7 @@
             <img src="./assets/images/code.jpeg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Photography</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
+              <div class="body-text project-card-text">Photography is a way to capture a moment, which is what makes them special.</div>
             </div>
             <a class="button" href="./photography">
               <span class="button-text">See More</span>
@@ -188,10 +171,10 @@
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/sketchbook.jpeg" class="project-image">
+            <img src="./assets/images/code/code-card.jpg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Code</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
+              <div class="body-text project-card-text">Coding is great because it helps you with problem solving. If you understand how to code, you can make amazing things.</div>
             </div>
             <a class="button" href="./code">
               <span class="button-text">See More</span>
@@ -199,10 +182,10 @@
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/sketchbook.jpeg" class="project-image">
+            <img src="./assets/images/music/music-card.jpg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Music</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
+              <div class="body-text project-card-text">I love playing the guitar and making music. Check out my youtube channel where I make songs and covers.</div>
             </div>
             <a class="button" href="./music">
               <span class="button-text">See More</span>
