--- a/music.html
+++ b/music.html
@@ -99,11 +99,8 @@
     <div id="project-details">
       <div class="subheader-text">Project Details / Background</div>
       <div class="project-details-content">
-        <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit
-          gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit
-          pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium
-          quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.
+        <div class="body-text">My most favorite thing to do is play the guitar and make music. I love metal
+          and hard rock. Ever since I turned 13, I have been playing the guitar.
         </div>
         <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget
           gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim
